--- a/style.css
+++ b/style.css
@@ -69,3 +69,11 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+.taskItem {
+  text-align: center;
+}
+
+textarea {
+  max-height: 40px;
+}
